--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -7,7 +7,7 @@
 
 
 
-  <%= simple_form_for :query, url: cocktails_path, method: "GET", html: { class: 'form-inline' } do |f| %>
+<%= simple_form_for :query, remote: true, url: cocktails_path, method: "GET", html: { class: 'form-inline' } do |f| %>
   <%= f.input :search, input_html: {value: ""} %>
   <%=f.input :filter,  collection: [ "gin", "last", "rum"],   as: :check_boxes %>
   <%= f.submit "Search", class: "btn btn-primary" %>
@@ -18,4 +18,19 @@
 </div>
 <p><%= link_to "Add Cocktail", new_cocktail_path, class: "btn btn-primary" %></p>
 
-<%= render 'cocktail_list', cocktails: @cocktails %>
+<div id="cocktails">
+  <%= render 'cocktail', cocktails: @cocktails %>
+
+</div>
+
+
+<script type="text/javascript">
+  var checkBoxes = document.querySelectorAll(".form-check-input");
+  var form = document.querySelector('form');
+
+  for (const check of checkBoxes) {
+  check.addEventListener( 'change', function() {
+    Rails.fire(form, 'submit');
+  });
+  }
+</script>
