--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -3,14 +3,18 @@
     <h1>Cocktails and Dreams</h1>
   </div>
 </div>
+<%= simple_form_for :query, url: cocktails_path, method: "GET", html: { class: 'form-inline' } do |f| %>
+  <%= f.input :search, input_html: {value: ""} %>
 
+  <%= f.submit "Search", class: "btn btn-primary" %>
+<% end %>
 
 
 
 <%= simple_form_for :query, remote: true, url: cocktails_path, method: "GET", html: { class: 'form-inline' } do |f| %>
-  <%= f.input :search, input_html: {value: ""} %>
+
   <%=f.input :filter,  collection: [ "gin", "last", "rum"],   as: :check_boxes %>
-  <%= f.submit "Search", class: "btn btn-primary" %>
+
 <% end %>
 
 
