--- a/app/assets/stylesheets/pages/_cocktails.scss
+++ b/app/assets/stylesheets/pages/_cocktails.scss
@@ -1,64 +1,65 @@
 
-h1 {
-  text-align: center;
-    margin-top: 16px;
-}
 
-p {
-  text-align: center;
-}
 
-.container-btn {
-  text-align: center;
+
+.cocktails {
+  padding: 16px 120px;
 }
 
 .cards {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-gap: 16px;
-  margin: 16px;
-  height: 500px;
-  a{
-    color: white;
-    margin-top: 24px;
-  }
+
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  // grid-gap: 16px;
+  // margin: 16px;
+  text-align: center;
 }
+
+.card {
+  width: 300px;
+  height: 300px;
+}
+
+ .card a{
+    color: white;
+  }
 
 .card-category {
-  background-size: contain;
+  width: 300px;
+  height: 300px;
 }
 
-// Smallest device
-@media (min-width: 100px) and (max-width: 575px) {
-  .cards {
-    grid-template-columns: 1fr;
-  }
-}
+// // Smallest device
+// @media (min-width: 100px) and (max-width: 575px) {
+//   .cards {
+//     grid-template-columns: 1fr;
+//   }
+// }
 
-// Small devices (landscape phones, 576px and up)
-@media (min-width: 576px) {
-  .cards {
-    grid-template-columns: 1fr;
-  }
-}
+// // Small devices (landscape phones, 576px and up)
+// @media (min-width: 576px) {
+//   .cards {
+//     grid-template-columns: 1fr;
+//   }
+// }
 
-// Medium devices (tablets, 768px and up)
-@media (min-width: 768px) {
-  .cards {
-    grid-template-columns: 1fr 1fr;
-  }
-}
+// // Medium devices (tablets, 768px and up)
+// @media (min-width: 768px) {
+//   .cards {
+//     grid-template-columns: 1fr 1fr;
+//   }
+// }
 
-// Large devices (desktops, 992px and up)
-@media (min-width: 992px) {
-  .cards {
-    grid-template-columns: 1fr 1fr 1fr;
-  }
-}
+// // Large devices (desktops, 992px and up)
+// @media (min-width: 992px) {
+//   .cards {
+//     grid-template-columns: 1fr 1fr 1fr;
+//   }
+// }
 
-// Extra large devices (large desktops, 1200px and up)
-@media (min-width: 1200px) {
-  .cards {
-    grid-template-columns: 1fr 1fr 1fr;
-  }
-}
+// // Extra large devices (large desktops, 1200px and up)
+// @media (min-width: 1200px) {
+//   .cards {
+//     grid-template-columns: 1fr 1fr 1fr;
+//   }
+// }
