--- a/app/views/cocktails/_cocktail.html.erb
+++ b/app/views/cocktails/_cocktail.html.erb
@@ -1,18 +1,21 @@
 
   <div class="cards">
     <% cocktails.each do |cocktail| %>
-    <div class="card">
-       <% if cocktail.photo.attached? %>
-          <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path cocktail.photo.key, height: 300, width: 300, crop: :fill %>')">
-            <p><%= link_to cocktail.name, cocktail_path(cocktail) %></p>
-          </div>
-        <% else %>
-          <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= asset_path 'martini.png' %>)">
-            <p><%= link_to cocktail.name, cocktail_path(cocktail) %></p>
-          </div>
-        <% end %>
 
-    </div>
-    <% end %>
-   </div>
+      <div class="card" data-aos="zoom-out"
+     data-aos-duration="2000">
+         <% if cocktail.photo.attached? %>
+            <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path cocktail.photo.key, height: 300, width: 300, crop: :fill %>')">
+              <p><%= link_to cocktail.name, cocktail_path(cocktail) %></p>
+            </div>
+          <% else %>
+            <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= asset_path 'martini.png' %>)">
+              <p><%= link_to cocktail.name, cocktail_path(cocktail) %></p>
+            </div>
+          <% end %>
+
+      </div>
+      <% end %>
+     </div>
+
 
