--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,21 +1,29 @@
-<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1525268323446-0505b6fe7778?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1952&q=80);">
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1470337458703-46ad1756a187?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1949&q=80);">
   <div class="container">
     <h1><%= @cocktail.name %></h1>
   </div>
 </div>
 
 
+<div class="container">
+  <div>
+    <ol>
 
+      <%  @doses.each do |dose|%>
+        <li>
 
-<div>
-  <%  @doses.each do |dose|%>
-    <p> <%= dose.description %> - <%= dose.ingredient['name'] %> <%= link_to "Remove", dose, method: :delete %></p>
-  <% end %>
+            <p> <%= dose.description %> - <%= dose.ingredient['name'] %> <%= link_to "Remove", dose, method: :delete %></p>
+        </li>
+      <% end %>
+    </ol>
+  </div>
+
+  <div class="container-btn">
+  <%= link_to "Add a step", new_cocktail_dose_path(@cocktail), class: 'btn btn-primary' %>
+
+  <%= link_to "Back to all cocktails", cocktails_path, class: 'btn btn-primary' %>
+
+  </div>
+
 </div>
 
-<div class="container-btn">
-<%= link_to "Add an Ingredient", new_cocktail_dose_path(@cocktail), class: 'btn btn-primary' %>
-
-<%= link_to "Back to all cocktails", cocktails_path, class: 'btn btn-primary' %>
-
-</div>
