bar rating added

--- a/app/views/ratings/_new.html.erb
+++ b/app/views/ratings/_new.html.erb
@@ -14,7 +14,7 @@
 
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/rateYo/2.3.2/jquery.rateyo.min.js"></script>
+<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/rateYo/2.3.2/jquery.rateyo.min.js"></script>
 <script>
   $(function () {
 
@@ -23,6 +23,21 @@
   });
 
 });
+</script> -->
+
+
+
+
+
+
+<script src="https://antennaio.github.io/jquery-bar-rating/dist/jquery.barrating.min.js"></script>
+<script type="text/javascript">
+   $(function() {
+      $('#rating_rating').barrating({
+        theme: 'fontawesome-stars'
+      });
+   });
 </script>
+
 
 
